// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Normal Blue 1`] = `
<Button
  disabled={false}
  label="Button label"
  onClick={[Function]}
  styling="normal-blue btn"
>
  <div>
    <button
      className="normal-blue btn"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Button label
    </button>
  </div>
</Button>
`;

exports[`Storyshots Button Normal Blue Mobile 1`] = `
<Button
  disabled={false}
  label="Button label"
  onClick={[Function]}
  styling="normal-blue btn"
>
  <div>
    <button
      className="normal-blue btn"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Button label
    </button>
  </div>
</Button>
`;

exports[`Storyshots Button Normal White 1`] = `
<Button
  disabled={false}
  label="Button label"
  onClick={[Function]}
  styling="normal-white btn"
>
  <div>
    <button
      className="normal-white btn"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Button label
    </button>
  </div>
</Button>
`;

exports[`Storyshots Button Normal White Mobile 1`] = `
<Button
  disabled={false}
  label="Button label"
  onClick={[Function]}
  styling="normal-white btn"
>
  <div>
    <button
      className="normal-white btn"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Button label
    </button>
  </div>
</Button>
`;
